# trading_dashboard

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
backend/: calculator.py  instruments.py  loc_engine.py  main.py  mock_feed.py
frontend/: package-lock.json
frontend/src/components/: ChartModal.jsx
frontend/src/pages/: Calculator.jsx  History.jsx  LOCTable.jsx
frontend/src/store/: useStore.js
