[project]
name = "trading-dashboard"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "protobuf==7.34.1",
    "pydantic==2.12.5",
    "python-dotenv==1.0.1",
    "websockets==12.0",
    "httpx==0.27.0",
    "upstox-python-sdk==2.21.0",
    "python-multipart==0.0.22",
    "orjson==3.11.7",
    "ujson==5.12.0",
    "openpyxl==3.1.5",
]

[tool.vercel]
entrypoint = "backend.main:app"
